--- a/index.html
+++ b/index.html
@@ -454,11 +454,11 @@
       <div class="col-md-4">
         <div class="card">
           <!-- Substitua o src abaixo pela imagem do seu Projeto 1 -->
-          <img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Projeto 1">
+          <img src="imagens/gest.png" class="card-img-top" alt="Projeto 1">
           <div class="card-body text-center">
             <h5 class="card-title">Projeto 1</h5>
             <p class="card-text">Descrição breve do projeto.</p>
-            <a href="#" class="btn btn-custom">Ver mais</a>
+            <a href="https://github.com/Murilomm8/Gest-o-pessoal.git" class="btn btn-custom">Ver mais</a>
           </div>
         </div>
       </div>
@@ -466,11 +466,11 @@
       <div class="col-md-4">
         <div class="card">
           <!-- Substitua o src abaixo pela imagem do seu Projeto 2 -->
-          <img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Projeto 2">
+          <img src="imagens/kanban.png" class="card-img-top" alt="Projeto 2">
           <div class="card-body text-center">
             <h5 class="card-title">Projeto 2</h5>
             <p class="card-text">Descrição breve do projeto.</p>
-            <a href="#" class="btn btn-custom">Ver mais</a>
+            <a href="https://github.com/Murilomm8/kanban-board-interativo.git" class="btn btn-custom">Ver mais</a>
           </div>
         </div>
       </div>
@@ -478,11 +478,11 @@
       <div class="col-md-4">
         <div class="card">
           <!-- Substitua o src abaixo pela imagem do seu Projeto 3 -->
-          <img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Projeto 3">
+          <img src="imagens/chat.png" class="card-img-top" alt="Projeto 3">
           <div class="card-body text-center">
             <h5 class="card-title">Projeto 3</h5>
             <p class="card-text">Descrição breve do projeto.</p>
-            <a href="#" class="btn btn-custom">Ver mais</a>
+            <a href="https://github.com/Murilomm8/Chat.git" class="btn btn-custom">Ver mais</a>
           </div>
         </div>
       </div>
